data/derived/comb/progs/unify/prog4479.ml.out
Characters 405-418:
  | Wow (u,v,w) -> sqrt(abs(eval(u,x,y)) *. abs(eval(v,x,y)) *. abs(eval(w,x,y)));;
                           ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
